--- a/EasyJob.Pojo/EasyJob.Pojo.csproj
+++ b/EasyJob.Pojo/EasyJob.Pojo.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Pojo\EmpMod.cs" />
     <Compile Include="Pojo\EmpModFunc.cs" />
     <Compile Include="Pojo\MaterialType.cs" />
+    <Compile Include="Pojo\ParaRef.cs" />
     <Compile Include="Pojo\UserSetPara.cs" />
     <Compile Include="Pojo\SetPara.cs" />
     <Compile Include="Pojo\WorkSub.cs" />
@@ -248,6 +249,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pojo\Xml\UserSetPara.hbm.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pojo\Xml\ParaRef.hbm.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
