增加跨域配置

--- a/EasyJob/Web.config
+++ b/EasyJob/Web.config
@@ -58,6 +58,19 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
+
+    <!---跨域-->
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
+        <add name="Access-Control-Max-Age" value="600" />
+        <add name="Access-Control-Allow-Headers" value="accept,authorization" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE" />
+      </customHeaders>
+    </httpProtocol>
+    <!---跨域-->
+    
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
