增加模块、数据权限等接口

--- a/EasyJob.Pojo/EasyJob.Pojo.csproj
+++ b/EasyJob.Pojo/EasyJob.Pojo.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Pojo\EmpMod.cs" />
     <Compile Include="Pojo\EmpModFunc.cs" />
     <Compile Include="Pojo\GoodsInfo.cs" />
+    <Compile Include="Pojo\EmpData.cs" />
     <Compile Include="Pojo\StorageAlarm.cs" />
     <Compile Include="Pojo\StockInit.cs" />
     <Compile Include="Pojo\Stock.cs" />
@@ -305,6 +306,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pojo\Xml\StorageAlarm.hbm.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pojo\Xml\EmpData.hbm.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
