--- a/WeiXin/WeiXin.csproj
+++ b/WeiXin/WeiXin.csproj
@@ -43,9 +43,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tools\HttpUtil.cs" />
-    <Compile Include="Tools\JsonUtil.cs" />
-    <Compile Include="Tools\StreamUtil.cs" />
     <Compile Include="Tools\WeiXinUtil.cs" />
     <Compile Include="WeiXin\Cert\JsApiTicket.cs" />
     <Compile Include="WeiXin\Cert\Oauth2Token.cs" />
@@ -60,6 +57,12 @@
     <Compile Include="WeiXin\Send\SendImageMsg.cs" />
     <Compile Include="WeiXin\Send\SendMenuMsg.cs" />
     <Compile Include="WeiXin\Send\SendTextMsg.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tools\Tools.csproj">
+      <Project>{44f6e44d-aa7a-4fb3-a8b5-63e0203ff73c}</Project>
+      <Name>Tools</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
