--- a/EasyJob.Pojo/EasyJob.Pojo.csproj
+++ b/EasyJob.Pojo/EasyJob.Pojo.csproj
@@ -34,6 +34,10 @@
     <Reference Include="Iesi.Collections">
       <HintPath>..\Dll\Hibernate\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.4.5.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\Dll\Hibernate\NHibernate.dll</HintPath>
     </Reference>
