--- a/EasyJob.Pojo/EasyJob.Pojo.csproj
+++ b/EasyJob.Pojo/EasyJob.Pojo.csproj
@@ -122,6 +122,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OfficeUtil\OfficeUtil.csproj">
+      <Project>{68c28253-6b18-4d7c-af4a-846a3fe011e2}</Project>
+      <Name>OfficeUtil</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ORM\ORM.csproj">
       <Project>{7EFB155D-578C-406D-8B2A-D4261A76CD3D}</Project>
       <Name>ORM</Name>
